# quelay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/contributing/: ARCHITECTURE.md  CODE_STYLE.md  LOCAL_TESTING.md  QUICK_START.md  TESTING.md
quelay-agent/: Cargo.toml  README.md
quelay-agent/src/: active_stream.rs  agent.rs  bandwidth_gate.rs  callback.rs  config.rs  framing.rs  main.rs  rate_limiter.rs  session_manager.rs  thrift_srv.rs
quelay-domain/: Cargo.toml
quelay-domain/src/: error.rs  lib.rs  priority.rs  scheduler.rs  session.rs  transport.rs
quelay-example/: Cargo.toml
quelay-example/src/: e2e_demo.rs  link_sim_demo.rs  main.rs  mock_demo.rs  quic_demo.rs  thrift_demo.rs
quelay-link-sim/: Cargo.toml
quelay-link-sim/src/: README.md  config.rs  lib.rs  session.rs  stream.rs  transport.rs
quelay-quic/: Cargo.toml
quelay-quic/src/: error.rs  lib.rs  session.rs  stream.rs  tls.rs  transport.rs
quelay-thrift/: Cargo.toml  quelay.thrift
quelay-thrift/src/: callback.rs  lib.rs  mapping.rs  quelay.rs
scripts/: .common  ci-bw-cap-test.sh  ci-e2e-test.sh  ci-integration-test.sh  ci-lint.sh  ci-smoke-test.sh  ci-test.sh  generate-bw-report  local-test.sh  pre-publish.sh  thrift-compile.sh
