[workspace]
members = [
    "quelay-domain",
    "quelay-quic",
    "quelay-thrift",
    "quelay-example",
    "quelay-agent",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
authors      = ["John Basrai"]
repository   = "https://github.com/jbasrai/quelay"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1"
uuid         = { version = "1", features = ["v4", "serde"] }
thiserror    = "1"
bytes        = "1"
tracing      = "0.1"
rand         = "0.8"
quelay-domain  = { path = "quelay-domain" }
quelay-thrift  = { path = "quelay-thrift" }
quelay-quic    = { path = "quelay-quic" }
