[package]
name        = "quelay-agent"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
description = "Quelay daemon — bridges local Thrift C2I clients to a remote peer over QUIC"
publish     = false

[[bin]]
name = "quelay-agent"
path = "src/main.rs"

[[bin]]
name = "e2e-test"
path = "src/bin/e2e_test.rs"

[[bin]]
name = "bw-cap-test"
path = "src/bin/bw_cap_test/mod.rs"

[dependencies]
quelay-domain  = { workspace = true }
quelay-quic    = { workspace = true }
quelay-thrift  = { workspace = true }
tokio          = { workspace = true }
async-trait    = { workspace = true }
uuid           = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap           = { version = "4", features = ["derive"] }
thrift         = "0.17"
rustls-pki-types = "1"
anyhow         = "1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
rand           = { version = "0.8", features = ["small_rng"] }
sha2           = "0.10"

[lints.clippy]
panic_in_result_fn    = "deny"
uninlined_format_args = "warn"
unwrap_used           = "deny"
expect_used           = "deny"
panic                 = "deny"
