[package]
name        = "quelay-example"
description = "Example Quelay client: sender/receiver over MockTransport and Thrift wiring"
publish     = false

version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
anyhow             = { workspace = true }
clap               = { version = "4", features = ["derive"] }
rand               = { version = "0.8", features = ["small_rng"] }
rustls-pki-types   = "1"
sha2               = "0.10"
thrift             = "0.17"
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = "0.3"
uuid               = { workspace = true }

quelay-domain      = { workspace = true }
quelay-thrift      = { workspace = true }
quelay-quic        = { workspace = true }
