[package]
name        = "quelay-link-sim"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
description = "In-process link simulator for testing Quelay transports"
publish      = false

[dependencies]
quelay-domain  = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
bytes       = { workspace = true }
tracing     = { workspace = true }
rand        = { workspace = true }
