[package]
name        = "quelay-quic"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
description = "QUIC transport implementation for Quelay over constrained links"
publish     = false

[dependencies]
quelay-domain = { workspace = true }
tokio         = { workspace = true }
async-trait   = { workspace = true }
uuid          = { workspace = true }
thiserror     = { workspace = true }
bytes         = { workspace = true }
tracing       = { workspace = true }
quinn         = "0.11"
rustls        = { version = "0.23", default-features = false, features = ["ring"] }
rcgen         = "0.13"
rustls-pki-types = "1"
