[package]
name        = "quelay-quic"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
description = "QUIC transport implementation for Quelay over constrained links"
publish     = false

[dependencies]
anyhow        = { workspace = true }
async-trait   = { workspace = true }
bytes         = { workspace = true }
quelay-domain = { workspace = true }
quinn         = "0.11"
rcgen         = "0.13"
rustls        = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pki-types = "1"
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }

[lints.clippy]
panic_in_result_fn    = "deny"
uninlined_format_args = "warn"
unwrap_used           = "deny"
expect_used           = "deny"
panic                 = "deny"
